--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -26,7 +26,7 @@ Optional Parameters:
     }
     else
     {
-        bool starred = C.GetStarred(shortPath);
+        bool starred = C.IsStarred(parsedID);
         
         <KeyboardShortcuts
             CtrlD="@DeleteBtnClick"
