--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -11,7 +11,7 @@
 
     private static void Yes()
     {
-        foreach(var yes in C.LoadMediaTrash(C.TrashSortMode.OldestDateTaken))
-            Console.WriteLine(yes.ToString());
+        Console.WriteLine(C.GetPathFromUuid("56ff7fcc-ef4d-11ec-8ea0-0242ac120002"));
+        Console.WriteLine(C.GetPathFromUuid(new Guid("56ff7fcc-ef4d-11ec-8ea0-0242ac120002")));
     }
 }
