--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -11,7 +11,6 @@
 
     private static void Yes()
     {
-        Console.WriteLine(C.GetPathFromUuid("56ff7fcc-ef4d-11ec-8ea0-0242ac120002"));
-        Console.WriteLine(C.GetPathFromUuid(new Guid("56ff7fcc-ef4d-11ec-8ea0-0242ac120002")));
+        C.AddToAlbum(new Guid("56ff78b0-ef4d-11ec-8ea0-0242ac120002"), 4);
     }
 }
