--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -58,7 +58,7 @@
     private static int checkedFolderIndex; //Which index in folders is checked (can only have 1 checked (true)).
     
     [Parameter] //Needs to be passed in
-    public List<string> SelectedItems { get; set; } //Passed in from the page. Paths selected by user
+    public List<Guid> SelectedItems { get; set; } //Passed in from the page. Items selected by user
     
     [Parameter]
     public EventCallback<int> SelectedItemsCountChanged { get; set; } //Used for clearing SelectedItems. https://blazor-university.com/components/two-way-binding/
@@ -115,7 +115,7 @@
     
     private async Task ClearChecks()
     {
-        foreach (string item in SelectedItems)
+        foreach (Guid item in SelectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         SelectedItems.Clear();
         AlbumsVis = "hidden";
@@ -137,18 +137,18 @@
     //Add item(s) to album(s) or folder selected.
     public async void ConfirmBtnClick()
     {
-        // if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
-            // foreach (string item in SelectedItems) C.AddToAlbum(item, folders[checkedFolderIndex].id);
-        // else
-        // {
-            // for (int c = 0; c < checkedAlbums.Count; c++)
-            // {
-                // if (checkedAlbums[c] == false) continue;
+        if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
+            foreach (Guid item in SelectedItems) C.AddToAlbum(item, folders[checkedFolderIndex].id);
+        else
+        {
+            for (int c = 0; c < checkedAlbums.Count; c++)
+            {
+                if (checkedAlbums[c] == false) continue;
 
-                // foreach (string item in SelectedItems)
-                    // C.AddToAlbum(item, albums[c].id);
-            // }
-        // }
+                foreach (Guid item in SelectedItems)
+                    C.AddToAlbum(item, albums[c].id);
+            }
+        }
 
         await CloseBtnClick();
 
