Can't test because errors but ViewItem's AS stuff should work with Guids

--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -98,7 +98,7 @@ Optional Parameters:
             }
         </div>
         
-        <AlbumSelector SelectedItems="@(new List<string> {shortPath})" @bind-AlbumsVis="@albumsVis"/>
+        <AlbumSelector SelectedItems="@(new List<Guid> {parsedID})" @bind-AlbumsVis="@albumsVis"/>
         
         <div class="inputBox" style="visibility: @editDateDivVis">
             <span>Enter new date taken:</span>
